Added meta details and accessibility

--- a/Components/App.razor
+++ b/Components/App.razor
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Experienced Software Engineer | 2+ Years .NET Development | Backend Specialist | Exploring Frontend Technologies | Delivering High-Quality Solutions">
+    <title>Faisal Khan - Software Engineer</title>
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
