--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -11,12 +11,14 @@
             <a href="https://github.com/faisalk1666"
                target="_blank"
                rel="noopener noreferrer"
+               aria-label="check github profile"
                class="text-[#8892b0] hover:text-[#64ffda] transition-transform">
                 <i class="fab fa-github text-xl"></i>
             </a>
             <a href="https://linkedin.com/in/faisk"
                target="_blank"
                rel="noopener noreferrer"
+               aria-label="check linkedin profile"
                class="text-[#8892b0] hover:text-[#64ffda] transition-transform">
                 <i class="fab fa-linkedin text-xl"></i>
             </a>
@@ -42,7 +44,7 @@
 <div id="blazor-error-ui" class="hidden">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
+    <a href="" class="dismiss">🗙</a>
 </div>
 
 @code {
