--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -122,10 +122,10 @@
 
             <!-- Social Links -->
             <div class="mt-[5rem] flex justify-center space-x-8">
-                <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="text-[#64ffda] text-4xl hover:text-[#ccd6f6] transition-colors">
+                <a href="https://www.linkedin.com/in/faisk" target="_blank" aria-label="check linkedin profile" class="text-[#64ffda] text-4xl hover:text-[#ccd6f6] transition-colors">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="https://github.com/yourusername" target="_blank" class="text-[#64ffda] text-4xl hover:text-[#ccd6f6] transition-colors">
+                <a href="https://github.com/faisalk1666" target="_blank" aria-label="check github profile" class="text-[#64ffda] text-4xl hover:text-[#ccd6f6] transition-colors">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
